@@ -99,6 +99,8 @@ public class UploadStep extends AbstractSubmissionStep
         message("xmlui.Submission.submit.UploadStep.file_help");
     protected static final Message T_file_error = 
         message("xmlui.Submission.submit.UploadStep.file_error");
+    protected static final Message T_upload_error =
+        message("xmlui.Submission.submit.UploadStep.upload_error");
     protected static final Message T_description = 
         message("xmlui.Submission.submit.UploadStep.description");
     protected static final Message T_description_help = 
@@ -218,7 +220,15 @@ public class UploadStep extends AbstractSubmissionStep
 	        
 	        //if no files found error was thrown by processing class, display it!
 	        if (this.errorFlag==org.dspace.submit.step.UploadStep.STATUS_NO_FILES_ERROR)
-	        	file.addError(T_file_error);
+	        {
+                file.addError(T_file_error);
+            }
+
+            // if an upload error was thrown by processing class, display it!
+            if (this.errorFlag == org.dspace.submit.step.UploadStep.STATUS_UPLOAD_ERROR)
+            {
+                file.addError(T_upload_error);
+            }
 	        	
 	        Text description = upload.addItem().addText("description");
 	        description.setLabel(T_description);
