@@ -116,6 +116,7 @@
  - [DS-106] Save & exit button doesn't properly work in workflow
  - [DS-126] Request to [dspace-base-url]/bitstream throw NPE
  - [DS-67] Impossible retry/resume after upload a file with internal format
+ - [DS-66] bitstream format registry, setting bitstream internal - ID: 1896055
  
 (Paulo Jobim)
  - SF Patch [2655052] Authors re-ordered when item edited (xmlui)
